fix(addon-editor): `Editor` fix scroll jumping on edits (#323)

--- a/projects/core/components/label/label.style.less
+++ b/projects/core/components/label/label.style.less
@@ -11,6 +11,7 @@
 .label {
     font: var(--tui-font-text-s);
     max-width: 100%;
+    margin-right: 4px;
     align-self: inherit;
     overflow: inherit;
     pointer-events: auto;
